Corrections : wrap sur les filtres, pour les rendres plus responsives.

--- a/View/styles.css
+++ b/View/styles.css
@@ -132,6 +132,7 @@ p {
 .Filtre {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .contenantBouton:hover {
@@ -188,9 +189,8 @@ p {
 }
 
 .containerIcone {
-  background-color: lightcoral;
   display: flex;
-  margin: 20px 0 20px 0;
+  margin: 35px 0 20px 0;
 }
 
 .containerIcone p {
@@ -201,10 +201,13 @@ p {
 
 .iconeInfo {
   display: flex;
-  background-color: #deebff;
   color: #0065fc;
-  width: 22px;
-  height: 22px;
+
+  border: 1px solid;
+  border-color: lightgray;
+
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
 
   margin-right: 7px;
